[package]
name = "beemo-join-time-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
humantime = "2.1.0"
indicatif = "0.17.6"
regex = "1.9.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
