[package]
name = "beemo_join_time_diff"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
criterion = "0.5.1"
humantime = "2.1.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]
criterion = "0.5.1"
beemo_join_time_diff = { path = "." }
codspeed-criterion-compat = "2.3.3"

[[bench]]
name = "parsing"
harness = false
